--- a/experience_bali.html
+++ b/experience_bali.html
@@ -299,7 +299,7 @@
 				<h3 class="col-s-6">@user1</h3>
 				<p class="col-s-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</article>
-			<img class="separator col-s-11" src="images/separator_comments.png">
+			<img class="separator col-s-11" src="images/separator_comments.png" alt="separator for the comments">
 			<article class="comment col-s-11">
 				<p class="col-s-6">Name</p>
 				<h3 class="col-s-6">@user1</h3>
@@ -308,13 +308,13 @@
 		</section>
 		<section class="comment-frm col-s-9">
 			<input type="text" class='comment-input col-s-10 col-t-11 col-11' name="comments">
-			<img class="send-btn" src="images/send.png"  alt="send comment">
+			<img class="send-btn" src="images/send.png" alt="send comment">
 		</section>
 	</section>
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
 		<h1> Sacred Moneky Forest - Bali </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/bali main img.png">
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/bali main img.png" alt="main image bali">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
 			<div class="interest"><p>Exotic</p></div>
 			<div class="interest"><p>Beach</p></div>
@@ -324,24 +324,23 @@
 			<h3>Approximate budget: 250€</h3>
 		</article>
 		<article id=description class='col-s-11 col-t-10 col-8'>
-			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<p/>
-			<br>
+			<p>Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary.<br><p/>
 			<p>The Monkey Forest Ubud has 186 species of plants and trees in 12,5 hectares of forest. The Monkey Forest Ubud has 3 temples, namely Dalem Agung Padangtegal Temple, Holy Spring Temple and Prajapati Temple. </p>
 		</article>
 		<section id="media" class="col-s-12 col-t-11 col-9">
 			<article id="images">
-	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
+	            <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt="right arrow images"></button>
 	            <div class="col-s-8 col-t-9 col-10">
-	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/bali_pic_1.png" alt="">
-	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/bali_pic_2.png" alt="">
-	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/bali_pic_3.png" alt="">
-	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/bali_pic_4.png" alt="">
-	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/bali_pic_5.png" alt="">
+	              <img id='img1' class="obj1 ex-img col-s-12 col-t-5" src="images/bali_pic_1.png" alt="image bali">
+	              <img id='img2' class="obj2 ex-img col-s-12 col-t-5" src="images/bali_pic_2.png" alt="another image bali">
+	              <img id='img3' class="obj3 ex-img col-s-12 col-t-5" src="images/bali_pic_3.png" alt="another another image bali">
+	              <img id='img4' class="obj4 ex-img col-s-12 col-t-5" src="images/bali_pic_4.png" alt="another another another image bali">
+	              <img id='img5' class="obj5 ex-img col-s-12 col-t-5" src="images/bali_pic_5.png" alt="another another another another image bali">
 	            </div>
-	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
+	            <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt="left arrow images"></button>
 	        </article>
 	        <article id="videos">
-		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt=""></button>
+		        <button type="button" class="arrow-img arr-right"><img src="images/left-arrow.png" alt="right arrow videos"></button>
 		        <div class="col-s-8 col-t-9 col-10">
 			        <iframe id="vid1" class="obj1 col-s-12 col-t-5" src="https://www.youtube.com/embed/CcsXiFOuNdA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<iframe id="vid2" class="obj2 col-s-12 col-t-5" src="https://www.youtube.com/embed/3pvPXEeUux4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -349,7 +348,7 @@
 					<iframe id="vid4" class="obj4 col-s-12 col-t-5" src="https://www.youtube.com/embed/z-SGIBaVRak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<iframe id="vid5" class="obj5 col-s-12 col-t-5" src="https://www.youtube.com/embed/-hxXeLB84MY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		        </div>
-		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt=""></button>
+		        <button type="button" class="arrow-img arr-left"><img src="images/right-arrow.png" alt="left arrow videos"></button>
 	      	</article>
         </section>
         <section id="bottom-sect" class="col-s-12">
