--- a/last_experiences.html
+++ b/last_experiences.html
@@ -279,9 +279,8 @@
 	<!-- MAIN SECTION -->
 	<section id="main-section">
 		<h1>Last Experiences</h1>
-		<nav id="filter-bar" class=" col-s-10 col-t-8 col-4">
-			<p class="col-s-2">filter</p>
-			<!-- <img class="col-s-1" src="images/filter icon.png"> -->
+		<nav id="filter-bar" class="col-s-10 col-t-8 col-4">
+			<label for="filter-input" class="col-s-2">filter</label>
 			<div class="col-s-10">
 				<input type="text" id="filter-input" class="col-s-10" name="filter-input">
 				<button id="add-filter-btn" class="col-s-2">add</button>
@@ -300,7 +299,7 @@
 		<section class="experiences">
 			<a href="experience_bali.html">
 				<article class="experience-r experience col-11">
-					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4">
+					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful temple in bali">
 					<div class="col-7">
 						<h3>Sacred Moneky Forest - Bali</h3>
 						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
@@ -313,12 +312,12 @@
 						<h3>City tour - Prague</h3>
 						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
 					</div>
-					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4">
+					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful city in prague">
 				</article>
 			</a>
 			<a href="experience_cies.html">
 				<article id='cies-exp' class="experience-r experience col-11">
-					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4">
+					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful cies islands">
 					<div class="col-7">
 						<h3>Trip to the Cies Islands - Vigo</h3>
 						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
