--- a/plan.html
+++ b/plan.html
@@ -282,27 +282,27 @@
 			<h3 class="col-s-5">Budget:</h3>
 			<div id="budget-params" class="col-s-7">
 				<div>
-					<h4 class="col-s-12">min:</h4>
-					<input type="text" name="min" class="col-s-10">
+					<label for="min" class="col-s-12">min:</label>
+					<input type="text" id="min" name="min" class="col-s-10">
 					<h3 class="col-s-1">€</h3>
 				</div>
 				<div>
-					<h4 class="col-s-12">max:</h4>
-					<input type="text" name="max" class="col-s-10">
+					<label for="max" class="col-s-12">max:</label>
+					<input type="text" id="max" name="max" class="col-s-10">
 					<h3 class="col-s-1">€</h3>
 				</div>
 			</div>
 		</article>
 		<article id="interests-frm" class="col-s-11 col-t-10 col-7">
-			<h3 class="col-4">Interests:</h3>
+			<label for="interests" class="col-4">Interests:</label>
 			<div class="col-8">
-				<h5>Separate the diferent interests using commas.</h5>
-				<input type="text" name="interests" class="col-s-10 col-12">
+				<h4>Separate the diferent interests using commas.</h4>
+				<input type="text" id="interests" name="interests" class="col-s-10 col-12">
 			</div>
 		</article>
 		<article id="destination-frm" class="col-s-11 col-t-10 col-7">
-			<h3 class="col-s-12 col-4">Destination:</h3>
-			<input class="col-s-10 col-8" type="text" name="destination" class="col-s-10">
+			<label for="destination" class="col-s-12 col-4">Destination:</label>
+			<input class="col-s-10 col-8" type="text" id="destination" name="destination" class="col-s-10">
 		</article>
 		<button id="search-btn">SEARCH</button>
 	</section>
