--- a/experience_prague.html
+++ b/experience_prague.html
@@ -16,8 +16,8 @@
 
 	<header class="clearfix">
 		<div id='header-main' class='col-t-12 col-s-12 col-12'>
-			<img class='col-s-2' id='show-menu' src="images/show-menu.png">
-			<img class="col-s-2 col-3" id='logo' src="images/logo.png">
+			<img class='col-s-2' id='show-menu' src="images/show-menu.png" alt="display menu">
+			<img class="col-s-2 col-3" id='logo' src="images/logo.png" alt="travelust logo">
 			<h2 class='col-s-5 col-4' id='head-title'>Travelust</h2>
 			<nav class='col-s-5 col-6' id='log-sign-frm'>
 				<div id="main-bts" class="col-s-12">
@@ -26,9 +26,9 @@
 				</div>
 				<div id="registered-bts" class="col-s-12">
 					<div id="pfp-user" class="col-s-9 col-t-7 col-3">
-						<img src="images/email%201.png" class="image_message" id="image_mes">
+						<img src="images/email%201.png" class="image_message" id="image_mes" alt="letter logo for messages">
 						<p class="text_username" id="username_show"></p>
-						<img src="images/user.png">
+						<img src="images/user.png" alt="user default image">
 					</div>
 					<div id="prf-out" class="col-t-3 col-6">
 						<button class="col-s-12 col-5" id='profile-btn'>Profile</button>
@@ -53,8 +53,9 @@
 			</nav>
 		</nav>
 		<nav id='search-bar' class='col-t-3 col-4'>
+			<label for="search-input">Search input</label>
 			<input type="text" id='search-input' name="search-input">
-			<img id='search-lupa' src="images/search_lupa.png">
+			<img id='search-lupa' src="images/search_lupa.png" alt="magnifying glass">
 		</nav>
 	</header>
 	<ul id="myList" class="col-4">
@@ -90,18 +91,18 @@
 					<label for="birth">New Birth Date</label>
 					<input type="date" name="birth" class="input-sign col-s-8" id="birth">
 					<label for="password">Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[a-z0-9]{0,8}" required>
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password" pattern="[A-Za-z0-9]{4,8}" required>
 					<label for="password-confirm">Confirm Password</label>
-					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[a-z0-9]{0,8}" required>
+					<input type="password" name="password" value="" class="input-sign col-s-8" id="password-confirm" pattern="[A-Za-z0-9]{4,8}" required>
 				</div>
 				<div id="right" class="col-s-3">
 					<img src="images/default_pfp.png" alt="current picture" class="col-s-8">
 					<input type="file" id="hidden" class="input-sign" name="change picture">
 					<label for="hidden" id="input-label">Select picture</label>
-					<label for="interest">Interests</label>
+					<h4>Interests</h4>
 					<form class="profile-info">
 						<div class="col-s-9 col-t-9 col-9">
-							<label for="inter1" class="label-int">Interest 1</label>
+							<label for="interest-1" class="label-int">Interest 1</label>
 							<select name="inter1" id="interest-1" class="col-s-12">
 								<option selected disabled hidden></option>
 								<option value="beach">Beach</option>
@@ -118,7 +119,7 @@
 							</select>
 						</div>
 						<div class="col-s-9 col-t-9 col-9">
-							<label for="inter2" class="label-int">Interest 2</label>
+							<label for="interest-2" class="label-int">Interest 2</label>
 							<select name="inter2" id="interest-2" class="col-s-12">
 								<option selected disabled hidden></option>
 								<option value="beach">Beach</option>
@@ -135,7 +136,7 @@
 							</select>
 						</div>
 						<div class="col-s-9 col-t-9 col-9">
-							<label for="inter3" class="label-int">Interest 3</label>
+							<label for="interest-3" class="label-int">Interest 3</label>
 							<select name="inter3" id="interest-3" class="col-s-12">
 								<option selected disabled hidden></option>
 								<option value="beach">Beach</option>
@@ -152,7 +153,7 @@
 							</select>
 						</div>
 						<div class="col-s-9 col-t-9 col-9">
-							<label for="inter4" class="label-int">Interest 4</label>
+							<label for="interest-4" class="label-int">Interest 4</label>
 							<select name="inter4" id="interest-4" class="col-s-12">
 								<option selected disabled hidden></option>
 								<option value="beach">Beach</option>
@@ -169,7 +170,7 @@
 							</select>
 						</div>
 						<div class="col-s-9 col-t-9 col-9">
-							<label for="inter5" class="label-int">Interest 5</label>
+							<label for="interest-5" class="label-int">Interest 5</label>
 							<select name="inter5" id="interest-5" class="col-s-12">
 								<option selected disabled hidden></option>
 								<option value="beach">Beach</option>
@@ -200,9 +201,9 @@
 			</div>
 			<div class="inputs">
 				<form class="profile-info">
-					<label for="email">Email</label>
+					<label for="email-login">Email</label>
 					<input type="email" name="email" value="" class="input-modify col-s-8" id="email-login" required>
-					<label for="password">Password</label>
+					<label for="password-login">Password</label>
 					<input type="password" name="password" value="" class="input-modify col-s-8" id="password-login" pattern="[a-z0-9]{0,8}" required>
 					<button type="submit" id="submit-login" class="submit-but col-s-3">Log in</button>
 				</form>
@@ -210,19 +211,6 @@
 			</div>
 		</article>
 		<!-- ----------END LOG IN----------- -->
-		<!-- ----------PLEASE LOG IN----------- -->
-		<article class="popup col-s-6" id="please-popup">
-			<div class="title-exit">
-				<h3>Log in</h3>
-				<button type="button" name="exit" class="exit-button">x</button>
-			</div>
-			<p>Please, log in to comment.</p>
-			<div id="please-btns">
-				<button class="col-s-6 please-btn" id='sign-please-btn'>Sign up</button>
-				<button class="col-s-6 please-btn" id='log-please-btn'>Log in</button>
-			</div>
-		</article>
-		<!-- ----------END PLEASE LOG IN----------- -->
 	</div>
 	<!-- ----------LOG OUT----------- -->
 	<div id="registered">
@@ -251,43 +239,45 @@
 		</div>
 		<div id="inside-messages">
 			<div id="your-chats" class="col-s-11 col-t-11 col-3">
-	      <h3>Your chats</h3>
-	      <div id="chats" class="">
-	        <article class="chat-person" id="default-person">
-	          <p class="date-chat" id="date-chat">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
-	        </article>
-	        <article class="chat-person" id="selected-chat">
-	          <p class="date-chat" id="date-chat">Default date</p>
-	          <img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-	          <h4 class="name-chat" id="name-chat">Defaul name</h4>
-	        </article>
-	      </div>
-	    </div>
-	    <div id="chat" class="col-s-11 col-t-11 col-8">
-	      <div id="title-chat">
-	        <h3 id="main-chat">Default name</h3>
-	        <img id="profile-chat" src="images/default_pfp.png" alt="default picture">
-	      </div>
-	      <hr id="horizontal">
-	      <div id="in-messages">
-	        <div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
-	          <p class="message-date-small" id="message-date">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	        <div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
-	          <p class="message-date-small" id="message-date">Default date</p>
-	          <p class="message-text">Default Message</p>
-	        </div>
-	      </div>
-	      <div class="col-s-9 comment-frm">
-	        <input type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
-	        <img class="send-btn" src="images/send.png" alt="send message">
-	      </div>
-	    </div>
+				<h3>Your chats</h3>
+				<div id="chats" class="">
+					<article class="chat-person" id="default-person">
+						<p class="date-chat" id="date-chat">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+					</article>
+					<article class="chat-person" id="selected-chat">
+						<p class="date-chat" id="date-chat">Default date</p>
+						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
+						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+					</article>
+				</div>
+			</div>
+			<div id="chat" class="col-s-11 col-t-11 col-8">
+				<div id="title-chat">
+					<h3 id="main-chat">Default name</h3>
+					<img id="profile-chat" src="images/default_pfp.png" alt="default picture">
+				</div>
+				<hr id="horizontal">
+				<div id="in-messages">
+					<div class="received-message message col-s-8 col-t-8 col-6" id="default-received">
+						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+					<div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
+						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-text">Default Message</p>
+					</div>
+				</div>
+				<div class="col-s-9 comment-frm">
+					<label for="message">Enter your message:</label>
+					<input id="message" type="text" class='comment-input col-s-10 col-t-11 col-11' name="message">
+					<img class="send-btn" src="images/send.png" alt="send message">
+				</div>
+			</div>
 		</div>
 	</article>
+	<!-- ----------END MESSAGES -------- -->
 
 	<!-- POP UP COMMENTS -->
 	<section id='pop-up-comments' class="col-s-11">
@@ -375,7 +365,7 @@
 	<!-- ----------FOOTER----------- -->
 	<footer class="clearfix">
 		<div id='footer-main' class='col-t-8 col-s-12 col-3'>
-			<img id='footer-logo' src="images/logo.png">
+			<img id='footer-logo' src="images/logo.png" alt="travelust logo">
 			<h2 id='footer-title'>Travelust</h2>
 		</div>
 
@@ -385,9 +375,9 @@
 		</div>
 
 		<div id="footer-images" class='col-t-4 col-s-16 col-3'>
-			<a href=""><img src="images/youtube%202.png"></a>
-			<a href=""><img src="images/twitter%201.png"></a>
-			<a href=""><img src="images/instagram%202.png"></a>
+			<a href="" alt="youtube"><img src="images/youtube%202.png" alt="youtube logo"></a>
+			<a href="" alt="twitter"><img src="images/twitter%201.png" alt="twitter logo"></a>
+			<a href="" alt="instagram"><img src="images/instagram%202.png" alt="instagram logo"></a>
 		</div>
 	</footer>
 	<!-- ----------END FOOTER----------- -->
