--- a/about_us.html
+++ b/about_us.html
@@ -244,9 +244,9 @@
 				<h3>Your chats</h3>
 				<div id="chats" class="">
 					<article class="chat-person" id="default-person">
-						<p class="date-chat" id="date-chat">Default date</p>
+						<p class="date-chat" id="date-chat-2">Default date</p>
 						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+						<h4 class="name-chat" id="name-chat-2">Defaul name</h4>
 					</article>
 					<article class="chat-person" id="selected-chat">
 						<p class="date-chat" id="date-chat">Default date</p>
@@ -283,7 +283,7 @@
 
     <section class="clearfix_about">
         <h1>About us</h1>
-        <img id='image_about' class="col-t-12 col-s-12 col-5" src="images/about_us.png">
+        <img id='image_about' class="col-t-12 col-s-12 col-5" src="images/about_us.png" alt="about us image infography">
         <p id="about-text" >We are a Professional trips Platform. Here we will provide you only with interesting content,. We're dedicated to providing you the best of ideas for planing your trips with a focus on dependability and sharing your ideas.. We're working to turn our passion for trips into a booming online website.and  social website We hope you enjoy traveling as much as we enjoy offering this tool to you.
             We will keep posting more important posts on my Website for all of you. Please give your support and love.
             Thanks For Visiting Our Site
