--- a/experience_cies.html
+++ b/experience_cies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -297,7 +297,8 @@
 			</article>
 		</section>
 		<section class="comment-frm col-s-9">
-			<input type="text" class='comment-input col-s-10 col-t-11 col-11' name="comments">
+			<label for="comment-in">Enter your comment:</label>
+			<input type="text" id="comment-in" class='comment-input col-s-10 col-t-11 col-11' name="comments">
 			<img class="send-btn" src="images/send.png"  alt="send comment">
 		</section>
 	</section>
@@ -347,6 +348,7 @@
         <section id="bottom-sect" class="col-s-12">
         	<article id="likes-coms" class="col-s-11">
         		<div class="col-s-9 comment-frm">
+					<label for="com-int-1">Enter your comment:</label>
         			<input id="com-int-1" type="text" class='comment-input col-s-10 col-t-11 col-11' name="comments">
         			<img class="send-btn" src="images/send.png"  alt="send comment">
         		</div>
