--- a/experience_prague.html
+++ b/experience_prague.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -297,7 +297,8 @@
 			</article>
 		</section>
 		<section class="comment-frm col-s-9">
-			<input type="text" class='comment-input col-s-10 col-t-11 col-11' name="comments">
+			<label for="comment-in-2">Enter your comment:</label>
+			<input type="text" id="comment-in-2" class='comment-input col-s-10 col-t-11 col-11' name="comments">
 			<img class="send-btn" src="images/send.png" alt="send comment">
 		</section>
 	</section>
@@ -350,7 +351,8 @@
         <section id="bottom-sect" class="col-s-12">
         	<article id="likes-coms" class="col-s-11">
         		<div class="col-s-9 comment-frm">
-        			<input type="text" class='comment-input col-s-10 col-t-11 col-11' name="comments">
+					<label for="comment-in">Enter your comment:</label>
+        			<input type="text" id="comment-in" class='comment-input col-s-10 col-t-11 col-11' name="comments">
         			<img class="send-btn" src="images/send.png"  alt="send comment">
         		</div>
         		<div id='like-frm' class='col-s-2'>
