--- a/profile.html
+++ b/profile.html
@@ -246,9 +246,9 @@
 						<h4 class="name-chat" id="name-chat">Defaul name</h4>
 					</article>
 					<article class="chat-person" id="selected-chat">
-						<p class="date-chat" id="date-chat">Default date</p>
+						<p class="date-chat" id="date-chat-2">Default date</p>
 						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+						<h4 class="name-chat" id="name-chat-2">Defaul name</h4>
 					</article>
 				</div>
 			</div>
@@ -264,7 +264,7 @@
 						<p class="message-text">Default Message</p>
 					</div>
 					<div class="sent-message message col-s-8 col-t-8 col-6" id="default-sent">
-						<p class="message-date-small" id="message-date">Default date</p>
+						<p class="message-date-small" id="message-date-2">Default date</p>
 						<p class="message-text">Default Message</p>
 					</div>
 				</div>
@@ -296,7 +296,7 @@
 				</div>
 			</div>
 			<form id="new-picture">
-				<label class="custom-file-upload" id="input-label">
+				<label class="custom-file-upload" id="input-label-prof">
 					<input type="file" class="hidden" name="change picture" id="new-pfp-in"/>
 				  Select Image
 				</label>
@@ -312,15 +312,15 @@
 		</div>
 		<div class="inputs">
 			<form class="profile-info" id="form-profile-info">
-				<label for="username">New Username</label>
+				<label for="form-username">New Username</label>
 				<input type="text" name="username" value="" class="input-modify col-s-8" id="form-username">
-				<label for="email">New Email Address</label>
+				<label for="form-email">New Email Address</label>
 				<input type="text" name="email" value="" class="input-modify col-s-8" id="form-email">
-				<label for="birth">New Birth Date</label>
+				<label for="form-birth">New Birth Date</label>
 				<input type="date" name="birth" class="input-modify col-s-8" id="form-birth">
-				<label for="password">New Password</label>
+				<label for="form-password">New Password</label>
 				<input type="password" name="password" value="" class="input-modify col-s-8" id="form-password">
-				<button type="submit" name="modify-prof" id="submit-mod" class="submit-but col-s-3">Submit</button>
+				<button type="submit" name="modify-prof" id="submit-mod-2" class="submit-but col-s-3">Submit</button>
 			</form>
 		</div>
 	</article>
@@ -338,7 +338,7 @@
 		</div>
 		<div class="inputs">
 			<form class="profile-info change-things" id="new-interest-form">
-				<label for="inter" id="label-int">Choose an interest to add</label>
+				<label for="new-interest-form-new" id="label-int">Choose an interest to add</label>
 				<select name="inter" id="new-interest-form-new" class="new-interest-profile col-s-5">
 					<option selected disabled hidden></option>
 				  <option value="beach">Beach</option>
