my_exp reference fixed

--- a/profile.html
+++ b/profile.html
@@ -397,7 +397,7 @@
 			<div id="buttons">
 				<button type="button" name="modify-profi" class="big-button col-s-5 col-t-5" id="mod-but">Modify profile</button>
 				<button type="button" name="change-interests" class="big-button col-s-5 col-t-5" id="inter-but">Change interests</button>
-				<button type="button" name="experiences" class="big-button col-s-7 col-t-9" id="exp-but">My Experiences</button>
+				<button type="button" name="experiences" class="big-button col-s-7 col-t-9" id="exp-but-link">My Experiences</button>
 			</div>
     </div>
   </section>
