--- a/experience_prague.html
+++ b/experience_prague.html
@@ -211,6 +211,20 @@
 			</div>
 		</article>
 		<!-- ----------END LOG IN----------- -->
+
+		<!-- ----------PLEASE LOG IN----------- -->
+		<article class="popup col-s-6" id="please-popup">
+			<div class="title-exit">
+				<h3>Log in</h3>
+				<button type="button" name="exit" class="exit-button">x</button>
+			</div>
+			<p>Please, log in to comment or like.</p>
+			<div id="please-btns">
+				<button class="col-s-6 please-btn" id='sign-please-btn'>Sign up</button>
+				<button class="col-s-6 please-btn" id='log-please-btn'>Log in</button>
+			</div>
+		</article>
+		<!-- ----------END PLEASE LOG IN----------- -->
 	</div>
 	<!-- ----------LOG OUT----------- -->
 	<div id="registered">
