comments and likes

--- a/index.html
+++ b/index.html
@@ -1182,6 +1182,13 @@
 					<div class="col-7">
 						<h3>Bali</h3>
 						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
+						<p class="read-more">Read more.</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>14</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>2</p>
+						</div>
 					</div>
 				</article>
 			</a>
@@ -1190,6 +1197,13 @@
 					<div class="col-7">
 						<h3>Prague</h3>
 						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
+						<p class="read-more">Read more.</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>10</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>2</p>
+						</div>
 					</div>
 					<img src="images/prague main img.png" class="col-s-12 col-t-12 col-4" alt="city of prague">
 				</article>
@@ -1200,6 +1214,13 @@
 					<div class="col-7">
 						<h3>Cies Islands</h3>
 						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
+						<p class="read-more">Read more.</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>25</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>1</p>
+						</div>
 					</div>
 				</article>
 			</a>
