--- a/last_experiences.html
+++ b/last_experiences.html
@@ -244,12 +244,12 @@
 					<article class="chat-person" id="default-person">
 						<p class="date-chat" id="date-chat">Default date</p>
 						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+						<h4 class="name-chat" id="name-chat">Default name</h4>
 					</article>
 					<article class="chat-person" id="selected-chat">
 						<p class="date-chat" id="date-chat">Default date</p>
 						<img class="profile-img-chat" src="images/default_pfp.png" alt="default picture">
-						<h4 class="name-chat" id="name-chat">Defaul name</h4>
+						<h4 class="name-chat" id="name-chat">Default name</h4>
 					</article>
 				</div>
 			</div>
@@ -306,6 +306,12 @@
 					<div class="col-7">
 						<h3>Sacred Moneky Forest - Bali</h3>
 						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>14</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>2</p>
+						</div>
 					</div>
 				</article>
 			</a>
@@ -314,6 +320,12 @@
 					<div class="col-7">
 						<h3>City tour - Prague</h3>
 						<p class="col-s-11 col-12">Prague, capital city of the Czech Republic, is bisected by the Vltava River. Nicknamed “the City of a Hundred Spires,” it's known for its Old Town Square, the heart of its historic core, with colorful baroque buildings, Gothic churches and the medieval...</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>10</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>2</p>
+						</div>
 					</div>
 					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful city in prague">
 				</article>
@@ -324,6 +336,12 @@
 					<div class="col-7">
 						<h3>Trip to the Cies Islands - Vigo</h3>
 						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
+						<div class="comments-and-likes">
+							<img src="images/like.png" alt="like heart">
+							<p>25</p>
+							<img src="images/like.png" alt="comment icon">
+							<p>1</p>
+						</div>
 					</div>
 				</article>
 			</a>
