w3c index.html a medias (hay que volver a copiar los headers y foooters)

--- a/experience_bali.html
+++ b/experience_bali.html
@@ -318,7 +318,7 @@
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
 		<h1> Sacred Moneky Forest - Bali </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/bali main img.png" alt="main image bali">
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/bali-main-img.png" alt="main image bali">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
 			<div class="interest"><p>Exotic</p></div>
 			<div class="interest"><p>Beach</p></div>
