--- a/experience_cies.html
+++ b/experience_cies.html
@@ -319,7 +319,7 @@
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
 		<h1> Trip to the Cies Islands - Vigo </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/cies main img.png" alt="image cies">
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/cies-main-img.png" alt="image cies">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
 			<div class="interest"><p>Islands</p></div>
 			<div class="interest"><p>Beach</p></div>
