--- a/experience_prague.html
+++ b/experience_prague.html
@@ -319,7 +319,7 @@
 	<!-- MAIN SECTION -->
 	<section id=main-sect>
 		<h1> City tour - Prague </h1>
-		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/prague main img.png" alt="main prague image">
+		<img id='main-img' class="col-s-12 col-t-10 col-8" src="images/prague-main-img.png" alt="main prague image">
 		<div id='interests' class="col-s-12 col-t-11 col-9">
 			<div class="interest"><p>City</p></div>
 			<div class="interest"><p>Europe</p></div>
