--- a/last_experiences.html
+++ b/last_experiences.html
@@ -302,7 +302,7 @@
 		<section class="experiences">
 			<a href="experience_bali.html">
 				<article class="experience-r experience col-11">
-					<img src="images/bali main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful temple in bali">
+					<img src="images/bali-main-img.png" class="col-s-12 col-t-9 col-4" alt="beautiful temple in bali">
 					<div class="col-7">
 						<h3>Sacred Moneky Forest - Bali</h3>
 						<p class="col-s-11 col-12">Mandala Suci Wenara Wana, or well known as Ubud Monkey Forest, is the sanctuary and natural habitat of the Balinese long-tailed macaque. It is located at Padangtegal Ubud, Bali. About 1049 monkeys live in this sanctuary. They are divided into 6 groups, namely in front of main temple group, forest...</p>
@@ -327,12 +327,12 @@
 							<p>2</p>
 						</div>
 					</div>
-					<img src="images/prague main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful city in prague">
+					<img src="images/prague-main-img.png" class="col-s-12 col-t-9 col-4" alt="beautiful city in prague">
 				</article>
 			</a>
 			<a href="experience_cies.html">
 				<article id='cies-exp' class="experience-r experience col-11">
-					<img src="images/cies main img.png" class="col-s-12 col-t-9 col-4" alt="beautiful cies islands">
+					<img src="images/cies-main-img.png" class="col-s-12 col-t-9 col-4" alt="beautiful cies islands">
 					<div class="col-7">
 						<h3>Trip to the Cies Islands - Vigo</h3>
 						<p class="col-s-11 col-12">Natural paradise in the Vigo estuary, the Cíes Islands are part of the maritime-terrestrial Natural Park of the Atlantic Islands of Galicia. This archipelago is made up of three islands: North or Monteagudo, Del Medio or do Faro, and South or San...</p>
