--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>14</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -1200,7 +1200,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>10</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -1217,7 +1217,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>25</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>1</p>
 						</div>
 					</div>
