--- a/last_experiences.html
+++ b/last_experiences.html
@@ -309,7 +309,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>14</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -323,7 +323,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>10</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>2</p>
 						</div>
 					</div>
@@ -339,7 +339,7 @@
 						<div class="comments-and-likes">
 							<img src="images/like.png" alt="like heart">
 							<p>25</p>
-							<img src="images/like.png" alt="comment icon">
+							<img src="images/coment.png" alt="comment icon">
 							<p>1</p>
 						</div>
 					</div>
